# command-line-calc

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/calculator/: __init__.py  calculation.py  calculations.py  calculator.py  cli.py  config.py  factory.py  history.py  main.py  memento.py  observers.py  operations.py  strategies.py
tests/: conftest.py  test_calculation.py  test_calculations.py  test_calculator.py  test_cli.py  test_config.py  test_factory.py  test_history.py  test_main.py  test_memento.py  test_observers.py  test_operations.py  test_strategies.py
