[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "command-line-calculator"
version = "0.1.0"
description = "A small REPL-based command-line calculator."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "susanchapas" }]
dependencies = ["pandas>=2.2", "python-dotenv>=1.0"]

[project.scripts]
calculator = "calculator.main:main"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
